<resources>
    <string name="app_name">UnitConverter</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="currency">Currency</string>
    <string name="Currency">Currency</string>
    <string name="weight">Weight</string>
    <string name="time">Time</string>
    <string name="length">Length</string>
    <string name="temperature">Temperature</string>
    <string name="convert">Convert</string>
    <string name="Convert">Convert</string>
    <string name="to">To</string>
    <string name="To">" To"</string>
    <string-array name="currency1">
        <item>Rupees</item>
        <item>Dollars</item>
    </string-array>
    <string-array name="RsOption">
        <item>Rupees</item>=
    </string-array>
    <string-array name="DOption">
        <item>Dollars</item>
    </string-array>
    <string-array name="weight1">
        <item>Kilograms</item>
        <item>Grams</item>
    </string-array>
    <string-array name="KgOption">
        <item>Kilograms</item>=
    </string-array>
    <string-array name="goption">
        <item>grams</item>
    </string-array>
    <string-array name="length1">
        <item>Centimeters</item>
        <item>Meters</item>
    </string-array>
    <string-array name="CMOption">
        <item>Meters</item>=
    </string-array>
    <string-array name="mption">
        <item>Centimeters</item>
    </string-array>
    <string-array name="temp">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="Coption">
        <item>Celsius</item>=
    </string-array>
    <string-array name="Foption">
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="time1">
        <item>Hours</item>
        <item>Minutes</item>
        <item>Seconds</item>
    </string-array>
    <string-array name="Hours">
        <item>Minutes</item>
        <item>Seconds</item>
    </string-array>
    <string-array name="Minutes">
        <item>Hours</item>
        <item>Seconds</item>
    </string-array>
    <string-array name="Seconds">
        <item>Hours</item>
        <item>Minutes</item>
    </string-array>




</resources>