<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#f5a481">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/unit_converter"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_weight="8"
        android:padding="10dp"
        android:layout_marginTop="30dp" >
        <androidx.cardview.widget.CardView
            android:id="@+id/currency"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="15dp">
         
            <LinearLayout
                
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:layout_width="129dp"
                    android:layout_height="113dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/currency"
                    android:src="@drawable/currency" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Currency"
                    android:fontFamily="sans-serif-medium"/>
                
               </LinearLayout>

           
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="15dp">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:layout_width="129dp"
                    android:layout_height="113dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/currency"
                    android:src="@drawable/weight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/weight"
                    android:fontFamily="sans-serif-medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_weight="8"
        android:padding="10dp"
        android:layout_marginTop="30dp" >
        <androidx.cardview.widget.CardView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="15dp">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:layout_width="129dp"
                    android:layout_height="113dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/currency"
                    android:src="@drawable/time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/time"
                    android:fontFamily="sans-serif-medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/length"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="15dp">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:layout_width="129dp"
                    android:layout_height="113dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/length"
                    android:src="@drawable/length" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/length"
                    android:fontFamily="sans-serif-medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="8"
        android:columnCount="1"
        android:padding="10dp"
        android:rowCount="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/temp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp">

            <LinearLayout

                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="129dp"
                    android:layout_height="113dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/currency"
                    android:src="@drawable/temperature" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/temperature" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>


</LinearLayout>



